# netket-convolutions

./: README.md  pyproject.toml
netket_convolutions/: __init__.py  _base.py  _kernel_expand.py  _periodic_conv.py  embed_layer.py  equivariant_layer.py  equivariant_linear.py  high_level.py  symmetric_linear.py
